tests/ui/rfcs/rfc-2565-param-attrs/attr-without-param.postedition2015.stderr
error: expected parameter name, found `)`
  --> $DIR/attr-without-param.rs:7:17
   |
LL |     fn f(#[attr]) {}
   |                 ^ expected parameter name

error: expected parameter name, found `)`
  --> $DIR/attr-without-param.rs:12:17
   |
LL |     fn f(#[attr]) {}
   |                 ^ expected parameter name

error: expected parameter name, found `)`
  --> $DIR/attr-without-param.rs:18:17
   |
LL |     fn f(#[attr]);
   |                 ^ expected parameter name

error: aborting due to 3 previous errors

